--- a/leaderboard/package.json
+++ b/leaderboard/package.json
@@ -16,7 +16,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "build-css": "tailwindcss build src/index.css -o dist/output.css"
   },
   "eslintConfig": {
     "extends": [
